# p3engine

./: CMakeLists.txt  README.md
data/: aim.tga  beam.mtl  beam.tga  bookcase.mtl  bookcase.tga  floor.mtl  floor.tga  grid.tga  hand.tga  table.mtl  table.tga  wall.mtl  wall.tga
data/alcohol/: heineken.mtl  heineken.tga  wine.mtl  wine.tga
data/glsl/: default.fsp  default.vsp  gauss_blur-25.fsp  gauss_blur-25.vsp  phong-1.fsp  phong-1.vsp  phong-2.fsp  phong-2.vsp
src/: application.cpp  application.hpp  example.cpp  example.hpp  main.cpp
src/gf/: common.cpp  common.hpp  device.cpp  device.hpp  idevice.hpp  ilogger.hpp  iresource.hpp  iscene.hpp  logger.cpp  logger.hpp  resource.cpp  resource.hpp  scene.cpp  scene.hpp
src/pf/: collision.cpp  collision.hpp  icollision.hpp
